# alpha-crunch

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: EDA.ipynb  FinanceLLM.ipynb  FinanceLLM_dataset.ipynb  FinanceLLM_eval.ipynb  RAG.ipynb
scripts/: eval_base_model.py  eval_finance_llm.py  train_finance_llm_1.py
scripts/agent/: test_agent.py
scripts/deploy/: finance_llm-get_health.sh  finance_llm-modal_serve.py  finance_llm-sample-request.sh  finance_llm-upload_adapter.py  finance_llm-upload_model.py  vector_db-upload-data-to-modal.py  vector_db_api.py  vector_db_get_health.sh  vector_db_query_sample.sh
scripts/rag/: ingest_data.py
src/alpha_crunch/: app.py
src/alpha_crunch/agent/: config.py  graph.py  llm_client.py  nodes.py  prompts.py  rag_node.py  state.py  tools.py  vector_store.py
src/alpha_crunch/finance_llm/: dataset.py
src/alpha_crunch/rag/: ingest.py
src/alpha_crunch/vector_db/: chroma_modal_provider.py  chroma_provider.py  contracts.py  factory.py  pinecone_provider.py  types.py  vector_app.py
tests/: test_chroma_modal_provider.py
tests/vector_db/: test_chroma_modal_provider.py  test_contract.py
