[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha_crunch"
version = "0.1.0"
dependencies = [
    "transformers==5.2.0",
    "peft==0.18.1",
    "datasets==4.6.1",
    "bitsandbytes==0.49.2",
    "pandas",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["src"]
