[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha_crunch"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "transformers==5.2.0",
    "peft==0.18.1",
    "datasets==4.6.1",
    "bitsandbytes==0.49.2",
    "pandas",
    "ipywidgets",
    "chromadb>=1.5.5",
    "sentence-transformers>=5.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "langchain-core>=1.2.18",
    "torch>=2.10.0",
    "gradio>=6.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
